Day34-k8s-intro/k8s-manifest-files/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meesho-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: ajio-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: myntra-ns

---
apiVersion: v1 
kind: Namespace
metadata:
  name: jio-ns
