Day34-k8s-intro/k8s-manifest-files/multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
  namespace: murali-ns
spec:
  containers:
    - name: netflix
      image: muralisocial123/netflix-25.v1:latest
      ports:
        - containerPort: 80

    - name: ipl2
      image: nginx:latest
      ports:
        - containerPort: 80
