Day34-k8s-intro/k8s-manifest-files/pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: ipl-pod
  namespace: ipl-ns
spec:
  containers:
    - name: ipl
      image: muralisocial123/ipl:latest
      ports:
        - containerPort: 3000
