Day34-k8s-intro/k8s-manifest-files/retail-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-app-deployment
  namespace: murali-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: retail
  template:
    metadata:
      labels:
        app: retail
    spec:
      containers:
      - name: retail-container
        image: saiteja2502/userprofileretail:latest
        ports:
        - containerPort: 3130  # Change to match your app's port
