Day34-k8s-intro/k8s-manifest-files/retail-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-mongodb
  namespace: murali-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
